# icVision

./: CMakeLists.txt  README.TXT  README.md  iCubVisionServer-startUp.sh  install_iCub_tools.sh  ports.db  subs.db  test.c
Demo-iCubArmWrestling/: CMakeLists.txt  armController.cpp  armController.h  headController.cpp  headController.h  main.cpp  torsoController.cpp  torsoController.h  touchthread.h
FIASCode/: CMakeLists.txt  README.txt
FIASCode/scripts/: iCub_head_with_ikinGazeCtrl.xml
FIASCode/src/: CMakeLists.txt
FIASCode/src/MainCode/: CMakeLists.txt
FIASCode/src/Motion/: CMakeLists.txt  main.cpp  main.h
IDSIAVision/evolvedFilter/: CMakeLists.txt  GaborImage.cpp  GaborImage.h  GpImage.cpp  GpImage.h  evolved_filter_module.cpp  evolved_filter_module.h  icFilterModule.cpp  icFilterModule.h  main.cpp
IDSIAVision/evolvedFilter/evolved_filters/: blue_detector.cpp  blue_detector.h  glass_detector.cpp  glass_detector.h  hand_detector.cpp  hand_detector.h  icub_finger.cpp  icub_finger.h  redbox_detector copy.h  redbox_detector.cpp  redbox_detector.h  teabox.cpp  teabox.h
IDSIAVision/redTarget/: CMakeLists.txt  main.cpp  redlocator_module.cpp  redlocator_module.h
LearningObjLocalization/GetImagesAndEncoderPos/: CMakeLists.txt  CVUtils.h  ColoredRect.cpp  ColoredRect.h  cv_widget.cpp  dashboard.cpp  dashboard.h  gl_widget.cpp  gl_widget.h  iCub_control.h  iCub_controller.cpp  iCub_controller.h  main.cpp  partController.cpp  partController.h  qtlogo.h  window.cpp  window.h
LearningObjLocalization/ppmpngConverter/: CMakeLists.txt  converter  left_0.ppm  main.cpp
MoBeE/src/: CMakeLists.txt
MoBeE/src/Apps/: CMakeLists.txt
MoBeE/src/CMakeScripts/: FindSOLID.cmake
MoBeE/src/FieldDemo/: CMakeLists.txt  controller.cpp  controller.h  main.cpp  opSpaceMotion.cpp  partController.cpp  partController.h  simpleMotion.cpp
MoBeE/src/LibKinematicModel/: CMakeLists.txt  bodypart.cpp  bodypart.h  compositeobject.cpp  compositeobject.h  cylinder.cpp  glwidget.cpp  interval.h  joint_revolute.cpp  kintreenode.cpp  marker.h  model.cpp  model.h  modelexception.h  motor.cpp  motor.h  objectmover.h  robot.cpp  robot.h  transformable.cpp  transformable.h  worldhandler.cpp  zphandler.cpp
MoBeE/src/LibRL/: CMakeLists.txt  action.cpp  action.h  actionReach.cpp  actionReach.h  actionTransition.cpp  actionTransition.h  learner.cpp  learner.h  mobee_interface.cpp  mobee_interface.h  rl_problem.cpp  (+5 more)
PartController/: CMakeLists.txt  main.cpp  partController.cpp  partController.h
PartController/xcode/: CMakeCache.txt  cmake_install.cmake
Reaching/: CMakeLists.txt
Reaching/conf/: readme.txt
Reaching/src/: CMakeLists.txt
StereoDisparityEstimation/src/: CMakeLists.txt  DepthTestDisplay.cpp  DepthTestDisplay.h  DepthYARP.cpp  DepthYARP.h  DisparityMapper.cpp  Filter.h  main.cpp  mainCLS.cpp  stdafx.h
VirtualSkin/src/: CMakeLists.txt
cartesianObject/: CMakeLists.txt  reactiveClosing.cpp  readme.txt  touched.cpp  touchthread.cpp  touchthread.h  touchthreadtest.cpp  turnaround.cpp
iCubGrasp/: CMakeLists.txt  handController.cpp  handController.h  main.cpp  touchthread.cpp  touchthread.h
iCubRoadMapDemo/: CMakeLists.txt  controlThread.cpp  controlThread.h  graphwidget.cpp  graphwidget.h  iCubController.cpp  iCubController.h  main.cpp  mainwindow.cpp  mainwindow.h  newMapDialog.cpp  newMapDialog.h  partController.cpp  partController.h  poses_reader.h  resources.qrc  roadmap.cpp  roadmap.h  widgetEdge.cpp  widgetEdge.h  widgetNode.cpp  widgetNode.h
iCubRoadMapDemo/maps/: 3pose  collideWithTable  fistMap  goodMap  goodMapSparse.txt  kail's script.txt  map  noEdges  safeMap  sparseMap  unreachable
iCubRoadMapDemo/nes_map/: right_hand_over_table.map  table_map_dense_nohead.txt
iCubRoadMapDemo/xcode/: CMakeCache.txt  cmake_install.cmake
icVision/src/: CMakeLists.txt
idsiaVisionDemoModule/ColorModelCreator/: .cproject  .project  CMakeLists.txt  ColorModelCreator.pro  Makefile  Makefile.Debug  Makefile.Release  main.cpp
idsiaVisionDemoModule/IDSIAObjectLocalization/: .cproject  .project  CMakeLists.txt  CVUtils.cpp  CVUtils.h  ColoredObjectDetector.cpp  ColoredObjectDetector.h  ColoredRect.cpp  ColoredRect.h  GeoUtils.cpp  GeoUtils.h  IDSIAObjectLocalization.pro  Makefile  Makefile.Debug  Makefile.Release  ObjectDetector.cpp  ObjectDetector.h  README.txt  README4Vision.txt  VisionModule.cpp  VisionModule.h  WorldObject.cpp  WorldObject.h  main.cpp
idsiaVisionDemoModule/SaliencyModule/: CMakeLists.txt  Makefile  saliency.cpp  saliency.h  saliency_module.cpp
idsiayarpmodules/: .cproject  .project  CMakeLists.txt  README
idsiayarpmodules/lib/: dummy.txt
idsiayarpmodules/src/: CMakeLists.txt
katanaCtrl/: CMakeLists.txt  jointController.cpp  jointController.h  main.cpp  touchthread.cpp
mover/src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  iCubMover  icubsettings.ini  icubsettings2.ini  icubsettings_sim.ini  main.cpp  main.cpp~  marijnsettings.ini  mover.cpp  mover.cpp~  mover.h  moverMinJerkForward.cpp  moverMinJerkForward.h  moverMinJerkLinear.cpp  moverMinJerkLinear.h  moverPosition.cpp  moverPosition.h  moverVelocityForward.cpp  moverVelocityForward.h  ports.db  simsettings.ini  subs.db  vectormath.h
safeCartesian/src/: CMakeLists.txt  README.txt  cartesian.cpp  cartesian.h  icubsettings.ini  main.cpp  portmonitor.cpp  portmonitor.h  simsettings.ini
src/: CMakeLists.txt
src/core/: CMakeLists.txt  core_module.cpp  core_module.h  main.cpp  module_info.h
src/evolvedFilters/: blue_detector.cpp  blue_detector.h  redblock_detector.h
src/icDisparityModule/: main.cpp
src/icFilterModule/: CMakeLists.txt  GaborImage.cpp  GaborImage.h  boolList.h  icEvolvedFilterModule.cpp  icEvolvedFilterModule.h  icFilterModule.cpp  icFilterModule.h  icImage.cpp  icImage.h  main.cpp  redFilterModule.cpp  redFilterModule.h
src/icSim/: simulatedRobot.cpp
src/icThreeDModule/: ThreeDModule.cpp  ThreeDModule.h
virtualSkin/src/: CMakeLists.txt  constants.h
vision_filter/src/: CMakeLists.txt  GpImage.cpp  GpImage.h  VisionModule.cpp  VisionModule.h  main.cpp
(+3743 files in other folders)
